Special case for "fka" headline in version 2.0

--- a/tests/md2html/fixtures/basic-old.html
+++ b/tests/md2html/fixtures/basic-old.html
@@ -2,6 +2,7 @@
 <p>Intro headline only needs to start with <code>## Introduction</code>.</p>
 </section><section class="override" id="sotd" data-max-toc="0"><h2>Status of This Document</h2>The source-of-truth for this specification is the HTML file referenced above as <em>This version</em>.</section>
 <section><h1>Heading 1</h1>
+<p>(fka something completely different)</p>
 <p>Text for first chapter</p>
 <section class="override" id="conformance"><h2>Version 30.0.1</h2>
 <p>This is the conformance section</p>
