Adjust test fixture
Jay, I had a test for this :smile:

--- a/tests/md2html/fixtures/basic-new.html
+++ b/tests/md2html/fixtures/basic-new.html
@@ -24,7 +24,7 @@
 </code></pre>
 <pre class="nohighlight" tabindex="0"><code>text/plain
 </code></pre>
-<pre class="highlight " tabindex="0"><code>no language
+<pre class="nohighlight" tabindex="0"><code>no language
 </code></pre>
 </section></section><section class="appendix"><h1>Appendix A: Revision History</h1>
 <table>
