Add test for new warning message

--- a/tests/md2html/fixtures/basic-new.html
+++ b/tests/md2html/fixtures/basic-new.html
@@ -26,6 +26,8 @@
 </code></pre>
 <pre class="nohighlight" tabindex="0"><code>no language
 </code></pre>
+<pre class="nohighlight" tabindex="0"><code>unknown language
+</code></pre>
 </section></section><section class="appendix"><h1>Appendix A: Revision History</h1>
 <table>
 <thead>
